# Rasterization-using-opengl

./: CMakeLists.txt  Doxyfile  README.md  run.sh
data/: fs.glsl  fs_shadow.glsl  fs_shadowDebug.glsl  fs_shadowmap.glsl  vs.glsl  vs_shadow.glsl  vs_shadowDebug.glsl  vs_shadowmap.glsl
include/: camera.h  geom.h  geombase.h  gwindow.h  render.h  scene.h  scenebase.h  shader.h  texture.h  ui.h
include_mesh/: Geometry.h  object.h
meshes/: meshes.txt
src/: camera.cpp  gapp.cpp  geom.cpp  gwindowGLFW.cpp  render.cpp  scenebase.cpp  shader.cpp  texture.cpp  ui.cpp  uiGLFW.cpp
src_mesh/: main.cpp  object.cpp
